--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,7 @@
 @import 'base/normolize';
 @import 'base/variables';
 body{
+    background: linear-gradient(45deg, #57003f 0%,#f57453 100%);
     height: 100vh;
     display: grid;
     grid-template-rows: 50px 1fr 50px;
@@ -10,7 +11,7 @@ body{
 @import 'blocks/main';
 
 .container{
-    max-width: 950px;
+    max-width: 1200px;
     margin: 0 auto;
     
 }
