--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,10 +4,14 @@ body{
     background: linear-gradient(45deg, #57003f 0%,#f57453 100%);
     height: 100vh;
     display: grid;
-    grid-template-rows: 50px 1fr 50px;
+    grid-template-rows: 25px 1fr;
+    grid-template-columns: 100px 1fr;
+    grid-template-areas: 
+    "header header"
+    "sider main";
 }
 @import 'blocks/header';
-@import 'blocks/footer';
+@import 'blocks/side-bar';
 @import 'blocks/main';
 
 .container{
