--- a/src/scss/blocks/_side-bar.scss
+++ b/src/scss/blocks/_side-bar.scss
@@ -3,4 +3,7 @@
     grid-area: sider;
     background-color: rgba($color: #000000, $alpha: 0.3);
     padding: 0 10px;
+    &__item{
+        color: $main-color;
+    }
 }
