--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -7,9 +7,16 @@
     justify-content: space-between;
     padding: 0 10px;
     color: #d5d0ce;
+    &__right{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
     &__right >*{
         color:#d5d0ce;
         text-decoration: none;
+        display: block;
+        margin: 0 5px;
         
     }
     &__right >*:hover{
